Moved to ArduinoMqtt client

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,7 @@
 [env:nodemcu-32s]
 platform = espressif32
 board = nodemcu-32s
-;board = esp32-s3-devkitc-1
 framework = arduino
 lib_deps = 
-	knolleary/PubSubClient@^2.8
 	adafruit/DHT sensor library@^1.4.6
+	arduino-libraries/ArduinoMqttClient@^0.1.8
